Fixed too-tight-spacing issues with the keyword bar and the logo bar.

--- a/sass/style/_blocks.scss
+++ b/sass/style/_blocks.scss
@@ -27,6 +27,7 @@
 }
 
 .region-branding {
+    padding-top: 5px;
     //background-color: $dark-grey;
 }
 
@@ -135,7 +136,7 @@ $unselected-menu: $dulled;
 
 #block-custom_solr_config-keyword_facets {
     vertical-align: middle;
-    margin-bottom: 0;
+    margin-bottom: $base-line-height;
     font-weight: 300;
     line-height: 0.6 * $base-line-height;
 
